<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">BudgetView</string>

  <string name="month_jan">January</string>
  <string name="month_feb">February</string>
  <string name="month_mar">March</string>
  <string name="month_apr">April</string>
  <string name="month_may">May</string>
  <string name="month_june">June</string>
  <string name="month_july">July</string>
  <string name="month_aug">August</string>
  <string name="month_sep">September</string>
  <string name="month_oct">October</string>
  <string name="month_nov">November</string>
  <string name="month_dec">December</string>

  <string name="short_month_jan">Jan</string>
  <string name="short_month_feb">Feb</string>
  <string name="short_month_mar">Mar</string>
  <string name="short_month_apr">Apr</string>
  <string name="short_month_may">May</string>
  <string name="short_month_june">June</string>
  <string name="short_month_july">July</string>
  <string name="short_month_aug">Aug</string>
  <string name="short_month_sep">Sep</string>
  <string name="short_month_oct">Oct</string>
  <string name="short_month_nov">Nov</string>
  <string name="short_month_dec">Dec</string>

  <string name="on_date">on</string>
  <string name="on_date_planned">planned on</string>

  <string name="budget_section">Budget</string>
  <string name="main_accounts_section">Main accounts</string>
  <string name="savings_accounts_section">Savings accounts</string>

  <string name="login_message">Activate data sharing from the "Preferences / Mobile"
    menu of the BudgetView application installed on your computer, then enter your login details below.
  </string>
  <string name="email">E-mail address</string>
  <string name="password">Password</string>
  <string name="login">Login</string>

  <string name="homeConnect">Login</string>
  <string name="homeDemo">Demo</string>

  <string name="loginWithNoId">Vous devez saisir une adresse email et un mot de passe</string>
  <string name="syncWithNoConnection">You need an internet access to login</string>
  <string name="syncWithInvalidId">Unknown user or invalid password</string>

  <string name="homeLoginMessage">Already using BudgetView?</string>
  <string name="homeDemoMessage">New to BudgetView?</string>

  <string name="demoFooter">Discover BudgetView!</string>
  <string name="demoLinkMessage">Visit our website:</string>
  <string name="demoLink">http://www.mybudgetview.com</string>
  <string name="demoTitle">Discover BudgetView!</string>
  <string name="demoPlatforms">Mac/Windows/Linux</string>
  <string name="demoEmailMessage">
    To receive a download link for your computer, just enter your email address below and click on the Send button:
  </string>
  <string name="demoEmailButton">Send email</string>
  <string name="demoEmailEmpty">You must enter your email address</string>
  <string name="demoEmailSent">An email was sent to your address</string>
  <string name="demoEmailSendingFailure">Could not sent an email to this address</string>
  <string name="demoEmailConnectionUnavailable">You need an internet connection to do this</string>
  <string name="demoScreenshotDescription">BudgetView</string>

  <string name="transactionAccount">Account</string>
  <string name="transactionSeries">Envelope</string>

  <string name="amountBlockActual">Actual</string>
  <string name="amountBlockPlanned">Planned</string>

  <string name="seriesListSectionLabel">Envelopes</string>
  <string name="seriesListEmptyMessage">There are no envelopes for this month</string>

  <string name="transactionListAccountSectionLabel">Position</string>
  <string name="transactionListSectionLabel">Transactions</string>
  <string name="transactionListEmptyMessage">There are no transactions this month</string>

  <string name="logoutButton">Logout</string>
  <string name="logoutTitle">Logout</string>
  <string name="logoutMessage">Do you want to log out?</string>
  <string name="logoutYes">Yes</string>
  <string name="logoutNo">No</string>

  <string name="sendEmailMessage">Contact us!</string>
  <string name="sendEmailSupportAddress">support@mybudgetview.com</string>
  <string name="sendEmailDefaultSubject">My comment about BudgetView</string>
  <string name="sendEmailError">Could not send the email</string>

  <string name="downloadError">Download error</string>
  <string name="downloadFailedUpdateMobile">You must update this application</string>
  <string name="downloadFailedUpdateDesktop">You must update the BudgetView application on your computer</string>

</resources>
