<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="@color/background"
              android:orientation="vertical"
  >

  <com.budgetview.android.components.Header
    android:id="@+id/header"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    />

  <View style="@style/LightSpacer"/>

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:textSize="20dp"
    android:textStyle="bold"
    android:textColor="#222222"
    android:text="@string/demoTitle"/>

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:textSize="15dp"
    android:textStyle="normal"
    android:textColor="#666666"
    android:text="@string/demoPlatforms"/>

  <ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:src="@drawable/desktop_screenshot"
    android:contentDescription="@string/demoScreenshotDescription"/>

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:textSize="16dp"
    android:textColor="#222222"
    android:text="@string/demoLinkMessage"/>

  <TextView
    android:id="@+id/goto_website"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:textSize="18dp"
    android:textColor="#0000FF"
    android:autoLink="web"
    />

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:layout_marginTop="10dp"
    android:textSize="14dp"
    android:textColor="#222222"
    android:text="@string/demoEmailMessage"
    />

  <EditText
    android:id="@+id/login_email"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:layout_margin="15dp"
    android:layout_marginBottom="5dp"
    android:inputType="textEmailAddress"/>

  <Button
    android:id="@+id/send_email"
    style="@style/LargeButton"
    android:layout_marginTop="5dp"
    android:text="@string/demoEmailButton"
    android:onClick="onSendEmail"/>

  <View style="@style/Spacer"/>

</LinearLayout>